# roam-mcp

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  handoff.txt
.claude/skills/org-roam-kb/: SKILL.md
.github/workflows/: ci.yml
docs/: HOW_TO_USE.md  emacs-tests-plan.org  org-roam-referencing-mechanics.md
src/: config.rs  lib.rs  main.rs  server.rs  sync.rs  validation.rs
src/index/: mod.rs  populate.rs  scan.rs  sqlite.rs
src/org/: anchors.rs  edit.rs  filetags.rs  mod.rs  parse.rs
src/tools/: content.rs  mod.rs  populate.rs  query.rs  retrieval.rs  sync_tool.rs  validation_tools.rs  write.rs
src/util/: mod.rs
tests/: emacs_populator_roundtrip.rs  harness_check.rs  http_transport.rs  mcp_integration.rs  new_tools.rs  populate_database.rs  prompts.rs  scan_index.rs  sqlite_index.rs  stale_index.rs  sync_database.rs  validation.rs  write_roundtrip.rs
tests/common/: mod.rs
tests/emacs/: verify_populated_db.el
tests/emacs_helper/: mod.rs
tests/fixtures/sample-vault/: fsm_canticle.org  legacy.org  noodly.org
tests/fixtures/text/: fsm_canticle.org  lorem.txt  multi_headlines.org  nested.org  no_id.org  unicode.org  with_anchors.org  with_links.org  with_refs.org
tests/fixtures/vault/: citeref.org  daily.org  fsm_canticle.org  noodly.org  psalm23.org  shepherd.org
